--- a/index.html
+++ b/index.html
@@ -8,13 +8,31 @@
 </head>
 <body>
     <div class="container">
-        
+        <span class="titulo">
+            <h2 class="quero-ser">Quero ser</h2>
+            <h1 class="os-net">O.S Net</h1>
+            <p class="texto-secundario">Registre-se aqui para ter a <br>O.S Net na sua casa🏠.</p>
+        </span>
         <input type="text" name="fullname" class="fullname input-opt" placeholder="Nome completo">
         <input type="number" name="age" class="age input-opt" placeholder="Age">
         <input type="email" name="email" class="email input-opt" placeholder="Email" >
+
         <input type="text" name="cpf" class="cpf input-opt" placeholder="CPF" >
+        <input type="file" name="CPF-frente" id="CPF-frente" placeholder="CPF">
+        <!--<label for="CPF-frente" class="CPF-Uploader">Foto CPF frente</label>-->
+
+        <input type="file" name="CPF-frente" id="CPF-frente" placeholder="CPF">
+        <!--<label for="CPF-frente" class="CPF-Uploader">Foto CPF verso</label>-->
+
         <input type="text" name="rg" class="rg input-opt" placeholder="RG" >
+        <!--<input type="file" name="RG-frente" id="RG-frente" placeholder="RG">
+        <label for="RG-frente" class="RG-Uploader">Foto RG frente</label>-->
+
+        <!--<input type="file" name="CPF-frente" id="CPF-frente" placeholder="CPF">
+        <label for="CPF-frente" class="CPF-Uploader">Foto RG verso</label>-->
+
         <input type="text" name="local" class="local input-opt" placeholder="Localidade" >
+        <input type="text" name="ponto-referencia" class="ponto-referencia input-opt" placeholder="Ponto de referencia" >
         <input type="date" name="data-pagamento" class="data-pagamento input-opt" placeholder="Data que deseja fazer pagamento">
             <select name="" id="opt-planos">
                 <option value="70">70 Megas</option>
