--- a/index.html
+++ b/index.html
@@ -14,41 +14,50 @@
             <p class="texto-secundario">Registre-se aqui para ter a <br>O.S Net na sua casa🏠.</p>
         </span>
         <input type="text" name="fullname" class="fullname input-opt" placeholder="Nome completo">
-        <input type="number" name="age" class="age input-opt" placeholder="Age">
+        <label for="data-nasc">Data de nascimento</label>
+        <div class="data-nasc" name="data-nasc">
+            <input type="number" name="dia" id="dia-nasc" class="input-data-nasc input-opt" placeholder="Dia">
+            <input type="number" name="mes" id="mes-nasc" class="input-data-nasc input-opt" placeholder="Mes">
+            <input type="number" name="ano" id="ano-nasc" class="input-data-nasc input-opt" placeholder="Ano">
+        </div>
+        
+
         <input type="email" name="email" class="email input-opt" placeholder="Email" >
 
         <input type="text" name="cpf" class="cpf input-opt" placeholder="CPF" >
-        <input type="file" name="CPF-frente" id="CPF-frente" placeholder="CPF">
-        <!--<label for="CPF-frente" class="CPF-Uploader">Foto CPF frente</label>-->
-
-        <input type="file" name="CPF-frente" id="CPF-frente" placeholder="CPF">
-        <!--<label for="CPF-frente" class="CPF-Uploader">Foto CPF verso</label>-->
 
         <input type="text" name="rg" class="rg input-opt" placeholder="RG" >
-        <!--<input type="file" name="RG-frente" id="RG-frente" placeholder="RG">
-        <label for="RG-frente" class="RG-Uploader">Foto RG frente</label>-->
+        <input type="text" name="rg" id="orgao-emissor" class="rg input-opt orgao-rg" placeholder="Orgão emissor de RG">
 
-        <!--<input type="file" name="CPF-frente" id="CPF-frente" placeholder="CPF">
-        <label for="CPF-frente" class="CPF-Uploader">Foto RG verso</label>-->
+        <label for="data-nasc">Data de emissao do RG</label>
+        <div class="data-nasc" name="data-">
+            <input type="number" name="dia" id="dia-emissao" class="input-data-nasc input-opt" placeholder="Dia">
+            <input type="number" name="mes" id="mes-emissao" class="input-data-nasc input-opt" placeholder="Mes">
+            <input type="number" name="ano" id="ano-emissao" class="input-data-nasc input-opt" placeholder="Ano">
+        </div>
+
 
         <input type="text" name="local" class="local input-opt" placeholder="Localidade" >
         <input type="text" name="ponto-referencia" class="ponto-referencia input-opt" placeholder="Ponto de referencia" >
-        <!--<input type="date" name="data-pagamento" class="data-pagamento input-opt" placeholder="Data que deseja fazer pagamento">-->
-        <select name="data-pagamento" id="opt-planos" class="data-pagamento input-opt">
-            <option value="5">Dia 5</option> <!-- verificar se esse são os dias mesmo-->
+        <input type="number" name="telefone-contato" class="ponto-referencia input-opt" placeholder="Telefone para contato" >
+        
+        <select name="data-pagamento" id="opt-dia" class="data-pagamento input-opt">
+            <option disabled selected>Dia para pagamentos</option>
+            <option value="5">Dia 5</option> 
             <option value="10">Dia 10</option>
             <option value="15">Dia 15</option>
             <option value="20">Dia 20</option>
             <option value="25">Dia 25</option>
             <option value="30">Dia 30</option>
         </select>
-            <select name="" id="opt-planos"> <!--colocar o valor de cada plano e colocar os planos reais-->
-                <option value="70">70 Megas</option>
-                <option value="100">100 Megas</option>
-                <option value="300">300 Megas</option>
+            <select name="" id="opt-planos">
+                <option disabled selected>Planos de internet</option>
+                <option value="70">100 Megas - R$ 69,00 </option>
+                <option value="100">200 Megas - R$ 79,00</option>
+                <option value="300">300 Megas - R$ 105,00</option>
             </select>
             <input type="submit" value="Enviar" class="btn-infos">
-    </div>
+    <br><br><br><br><br><br><br>
     <script src="scripts.js"></script>
 </body>
 </html>
