opcao checkbox cidade marcada

--- a/index.html
+++ b/index.html
@@ -56,6 +56,22 @@
                 <option value="100">200 Megas - R$ 79,00</option>
                 <option value="300">300 Megas - R$ 105,00</option>
             </select>
+
+            <div>
+
+                <span>
+                    <input type="checkbox" name="cidade" id="planos-cidade">
+                    <label for="cidade">cidade</label>
+                </span>
+
+
+                <span id="opt-escolhas">
+
+                </span>
+
+                <script src="algoritmo_sitio_casa.js"></script>                
+            </div>
+
             <input type="submit" value="Enviar" class="btn-infos">
     <br><br><br><br><br><br><br>
     <script src="scripts.js"></script>
