sitio checkbox add

--- a/index.html
+++ b/index.html
@@ -64,13 +64,18 @@
                     <label for="cidade">cidade</label>
                 </span>
 
+                <span>
+                    <input type="checkbox" name="sitio" id="planos-sitio">
+                    <label for="sitio">sitio</label>
+                </span>
+            </div>
 
                 <span id="opt-escolhas">
 
                 </span>
 
                 <script src="algoritmo_sitio_casa.js"></script>                
-            </div>
+
 
             <input type="submit" value="Enviar" class="btn-infos">
     <br><br><br><br><br><br><br>
