--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             
             <label for="email">Email:</label>
-            <input type="email" name="email" class="email input-opt" placeholder="Exemplo: seuemail@gmail.com" >
+            <input type="text" name="email" class="email input-opt" placeholder="Exemplo: seuemail@gmail.com" >
             <label for="cpf">CPF:</label>
             <input type="text" name="cpf" class="cpf input-opt" placeholder="CPF" >
             <label for="rg">RG</label>
